# Zwet-engine

./: .gitignore  3D_voxel_physics.sln  CMakeLists.txt  LICENSE.md  Project1.vcxproj  README.md  build.sh  conanfile.py  conanfile.txt
build_old/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: audioCore.h  core.h  fontParser.h  gameObj.h  gameObject.h  kbInput.h  modelLib.h  physicsCore.h  sceneCore.h  texture.h  vecCalc.h  vecs.h  viewport.h
include/core/: application.h  core.h  utils.h  window.h  zwet.h
include/debug/: log.h
include/input/: keyInput.h
include/mesh/: font.h  mesh.h
include/renderer/: attributeLayout.h  camera.h  drawer.h  frameBuffer.h  renderer.h  shader.h  texture.h  vertexBuffer.h
include/scene/: entity.h  scene.h
include/utils/: structs.h  utils.h  vecCalc.h
includes/: audioCore.h  core.cpp  core.h  fontParser.h  gameObj.cpp  gameObj.h  kbInput.cpp  kbInput.h  scene.cpp  scene.h  sceneCore.h  vecCalc.cpp  vecCalc.h  vecs.cpp  vecs.h  viewport.cpp  viewport.h
includes/shaders/: frag.glsl  geom.glsl  vert.glsl
includes/shaders/cube/: geom.glsl  geom2.glsl  vert.glsl  vertCube.glsl  vertShip.glsl
resources/scenes/: sceneExample.json
resources/shaders/: frag.glsl  frag2.glsl  fragTextureLighting.glsl  vert.glsl  vertCube.glsl  vertShip.glsl
src/: audioCore.cpp  core.cpp  fontParser.cpp  gameObj.cpp  gameObject.cpp  kbInput.cpp  main.cpp  modelLib.cpp  physicsCore.cpp  scene.cpp  sceneCore.cpp  texture.cpp  vecCalc.cpp  vecs.cpp  viewport.cpp
src/core/: application.cpp  window.cpp
src/debug/: log.cpp
src/input/: keyInput.cpp
src/mesh/: font.cpp  mesh.cpp
src/renderer/: attributeLayout.cpp  camera.cpp  drawer.cpp  frameBuffer.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexBuffer.cpp  viewport.cpp
src/scene/: entity.cpp  scene.cpp
src/utils/: vecCalc.cpp
test/: demo1.cpp  demo2.cpp  main.cpp
test/resources/models/: racetrack3.mtl
test/resources/scenes/: scene.json  sceneDemo1.json  sceneDemo3.json  sceneExample.json
test/resources/shaders/: fragTextureLighting.glsl  geom.glsl  geom2.glsl  vertCar.glsl  vertCube1.glsl  vertFont.glsl  (+1 more)
x64/Debug/: texture.obj.enc
